# shift-optimizer

./: .env.prod.example  .gitignore  .gitleaks.toml  .gitleaksignore  CI_STATUS_MATRIX.md  DEPLOYMENT.md  FIXLOG_PATCHSET.md  FORENSIC_TRUTH_SNAPSHOT.md  HOW_TO_RUN_V3_TESTS.md  KPI_DRIFT_REPORT.json  LTS_ONBOARDING.md  MERGE_DECISION.md  README.md  REGRESSION_REPORT.md  REGRESSION_RESULT.json  RELEASE.md  RUNBOOK_OPERATIONS_CADENCE.md  RUNBOOK_PROD_CUTOVER.md  RUNBOOK_WIEN_PILOT.md  SECURITY_ARCHITECTURE_V3.3b.md  SECURITY_AUDIT_PILOT_CHAIN.md  SECURITY_EVIDENCE_PACK.md  SECURITY_REVIEW_GUIDE.md  SKILL.md  SOLVEREIGN_BLUEPRINT.md  SOLVEREIGN_COMPLETE_DOCUMENTATION.md  SOLVEREIGN_PRESENTATION.md  ShiftOptimizer.spec  V3.3b_BACKLOG.md  V3_COMPLETION_SUMMARY.md  V3_FILES_CREATED.md  V3_MVP_COMPLETE.md  V3_PROOF_PACKAGE.md  V3_VERIFICATION_COMPLETE.md  VERSIONING.md  analyze_triples.py  baseline_metrics_raw.txt  build_app.bat  claude.md  compare_rc0_rc1.py  (+57 more)
backend_py/: .dockerignore  .env.example  AUDIT_CHECKLIST_OUTPUT.txt  CANARY_RUNBOOK.md  CHANGELOG.md  DEPLOY_RUNBOOK.md  Dockerfile  OPS_RUNBOOK.md  P0_1_MATHEMATICAL_PROOF.md  P0_FIXES_SUMMARY.md  P0_INDEX.md  P0_MIGRATION_GUIDE.md  P0_QUICK_START.md  P0_REALITY_CHECK_REPORT.md  ROADMAP.md  SECURITY_AUDIT_BACKEND.md  V3_IMPLEMENTATION.md  V3_QUICKSTART.md  _legacy_test_p0_migration.py.skip  _legacy_test_v3_integration.py.skip  _legacy_test_v3_without_db.py.skip  analyze_blocks.py  analyze_forecast_demand.py  analyze_greedy.py  analyze_violations.py  apply_p0_migration.bat  apply_p0_migration.sh  audit_invariants.py  cli.py  compare_hashes.py  conftest.py  convert_real_forecast.py  debug_feasibility.py  debug_greedy.py  debug_log.txt  debug_phase.py  desktop_main.py  entry_probe.txt  (+76 more)
(+1855 files in other folders)
